# kodi-utilities

./: CMakeLists.txt  kodiutilities-config.cmake.in  kodiutilities.pc.in
debian/: changelog.in  control  copyright  libkodiutilities-dev.install
src/util/: StringUtils.cpp  StringUtils.h  XMLUtils.cpp  XMLUtils.h  fstrcmp.h  util.h
